# widget-ts-cookiecutter

./: .gitignore  .travis.yml  LICENSE  README.md  cookiecutter.json  pytest.ini
.github/workflows/: build.yml
tests/: test_instantiate.py  testconfig.yaml
{{cookiecutter.github_project_name}}/: .coveragerc  .eslintrc.js  .gitignore  .travis.yml  LICENSE.txt  MANIFEST.in  README.md  appveyor.yml  codecov.yml  install.json  package-lock.json  package.json  pyproject.toml  pytest.ini  release.js  setup.cfg  setup.py  setupbase.py  tsconfig.json  webpack.config.js  {{cookiecutter.python_package_name | replace("-","_")}}.json  {{cookiecutter.python_package_name}}.json
{{cookiecutter.github_project_name}}/.github/workflows/: build.yml
{{cookiecutter.github_project_name}}/docs/: Makefile  environment.yml  make.bat
{{cookiecutter.github_project_name}}/docs/source/: conf.py  develop-install.rst  index.rst  installing.rst
{{cookiecutter.github_project_name}}/examples/: introduction.ipynb
{{cookiecutter.github_project_name}}/src/: extension.ts  index.ts  plugin.ts  tsconfig.json  version.ts  widget.ts
{{cookiecutter.github_project_name}}/src/__tests__/: utils.ts
{{cookiecutter.github_project_name}}/tests/: karma.conf.js  tsconfig.json
{{cookiecutter.github_project_name}}/tests/src/: utils.spec.ts
{{cookiecutter.github_project_name}}/ts/: package.json  webpack.config.js
{{cookiecutter.github_project_name}}/ts/src/: example.ts  index.ts  tsconfig.json
{{cookiecutter.github_project_name}}/{{cookiecutter.python_package_name | replace("-","_")}}/: _frontend.py  _version.py
{{cookiecutter.github_project_name}}/{{cookiecutter.python_package_name | replace("-","_")}}/nbextension/: __init__.py
{{cookiecutter.github_project_name}}/{{cookiecutter.python_package_name | replace("-","_")}}/nbextension/static/: extension.js
{{cookiecutter.github_project_name}}/{{cookiecutter.python_package_name | replace("-","_")}}/tests/: conftest.py  test_nbextension_path.py
{{cookiecutter.github_project_name}}/{{cookiecutter.python_package_name}}/: __init__.py  _version.py  example.py
{{cookiecutter.github_project_name}}/{{cookiecutter.python_package_name}}/jlextension/: package.json
{{cookiecutter.github_project_name}}/{{cookiecutter.python_package_name}}/jlextension/src/: index.ts  tsconfig.json
{{cookiecutter.github_project_name}}/{{cookiecutter.python_package_name}}/nbextension/: __init__.py  extension.js
{{cookiecutter.github_project_name}}/{{cookiecutter.python_package_name}}/nbextension/static/: extension.js
{{cookiecutter.github_project_name}}/{{cookiecutter.python_package_name}}/tests/: test_example.py  test_nbextension_path.py
