[build-system]
requires = [
    "hatchling>=1.3.1",
    "jupyterlab==3.*",
]
build-backend = "hatchling.build"

[project]
name = "{{ cookiecutter.github_project_name }}"
description = "{{ cookiecutter.project_short_description }}"
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.7"
authors = [
    { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" },
]
keywords = [
    "IPython",
    "Jupyter",
    "Widgets",
]
classifiers = [
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "ipywidgets>=7.0.0",
]
version = "0.1.0.dev0"

[project.optional-dependencies]
docs = [
    "jupyter_sphinx",
    "nbsphinx",
    "nbsphinx-link",
    "pypandoc",
    "pytest_check_links",
    "recommonmark",
    "sphinx>=1.5",
    "sphinx_rtd_theme",
]
examples = []
test = [
    "nbval",
    "pytest-cov",
    "pytest>=6.0",
]

[project.urls]
Homepage = "https://github.com/{ cookiecutter.github_organization_name }}/{{ cookiecutter.github_project_name }}"

[tool.hatch.build]
artifacts = [
    "{{ cookiecutter.github_project_name }}/nbextension/index.*",
    "{{ cookiecutter.github_project_name }}/labextension/*.tgz",
    "{{ cookiecutter.github_project_name }}/labextension",
]

[tool.hatch.build.targets.wheel.shared-data]
"{{ cookiecutter.github_project_name }}/nbextension" = "share/jupyter/nbextensions/{{ cookiecutter.github_project_name }}"
"{{ cookiecutter.github_project_name }}/labextension" = "share/jupyter/labextensions/{{ cookiecutter.github_project_name }}"
"./install.json" = "share/jupyter/labextensions/{{ cookiecutter.github_project_name }}"
"./{{ cookiecutter.github_project_name }}.json" = "etc/jupyter/nbconfig/notebook.d"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
]

[tool.hatch.build.hooks.jupyter-builder]
ensured-targets = [
    "{{ cookiecutter.github_project_name }}/nbextension/index.js",
    "{{ cookiecutter.github_project_name }}/labextension/package.json",
]
skip-if-exists = [
    "{{ cookiecutter.github_project_name }}/nbextension/index.js",
    "{{ cookiecutter.github_project_name }}/labextension/package.json",
]
dependencies = [
    "hatch-jupyter-builder>=0.5.0",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "."
build_cmd = "build:prod"

[tool.tbump]
field = [
    { name = "channel", default = "" },
    { name = "release", default = "" },
]
file = [
    { src = "pyproject.toml" },
    { src = "{{ cookiecutter.github_project_name }}/_version.py" },
]

[tool.tbump.version]
current = "0.1.0.dev0"
regex = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)((?P<channel>a|b|rc|.dev)(?P<release>\\d+))?"

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"
